--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         
         <div class="row" id="abstract-row">
             <!-- Home Page Stuff -->
-            <div class="col-4"></div>
+            <div class="col-0 col-sm-1 col-md-2 col-lg-3 col-xl-4" ></div>
             <!-- Abstract -->
-            <div class="col-6 border">
+            <div class="col-10 col-sm-9 col-md-9 col-lg-9 col-xl-8 border">
                 Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract Abstract. </div>
+            <div class="col-2 col-sm-1 col-md-1 col-lg-0 col-xl-0 bg-warning"></div>
         </div>
         
         <div class="row">
