--- a/projects.html
+++ b/projects.html
@@ -38,9 +38,9 @@
         
         
         <!-- Col 3: Nav Links-->
-        <div class="col-3">
+        <div class="col-3 px-md-5">
             <!-- Navigation Links -->
-            <div class="row" id="nav-links">
+            <div class="row px-1 px-sm-2 px-m-4 px-lg-5 py-sm-3 my-sm-3 py-lg-5 my-lg-5" id="nav-links">
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item align-self-center">
                         <a class="nav-link" href="index.html">Home</a>
